syntax = "proto3";
package routes;

enum SimpleRoutes {
    AllNodes=0;
    AllPrimaries=1;
    Random=2;
}

enum SlotTypes {
    Primary=0;
    Replica=1;
}

message SlotIdRoute {
    SlotTypes slot_type = 1;
    int32 slot_id = 2;
}

message SlotKeyRoute {
    SlotTypes slot_type = 1;
    string slot_key = 2;
}

message Routes {
    oneof value {
        SimpleRoutes simple_routes = 1;
        SlotKeyRoute slot_key_route = 2;
        SlotIdRoute slot_id_route = 3;
    }
}
